Se agrego 2 IAs para realizar analisis

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@
 GITHUB_TOKEN=ghp_your_github_token_here
 GITHUB_REPOSITORY=owner/repo
 
-# Anthropic Claude API
+# AI Model API Keys
 ANTHROPIC_API_KEY=sk-ant-your_api_key_here
+OPENAI_API_KEY=sk-your_openai_key_here
+GEMINI_API_KEY=your_gemini_key_here
 
 # Pull Request Number (automatically set by GitHub Actions)
 PR_NUMBER=1
