--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
-    "@octokit/rest": "^21.0.2"
+    "@google/generative-ai": "^0.24.1",
+    "@octokit/rest": "^21.0.2",
+    "openai": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
