Implementacion de despliegue local docker

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ GEMINI_API_KEY=your_gemini_key_here
 
 # Pull Request Number (automatically set by GitHub Actions)
 PR_NUMBER=1
+
+# Database Audit Configuration
+POSTGRES_IMAGE=postgres:15
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=postgres
