--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "audit:db": "tsx src/audit/cli.ts"
   },
   "keywords": [
     "supabase",
@@ -23,10 +24,15 @@
     "@anthropic-ai/sdk": "^0.32.1",
     "@google/generative-ai": "^0.24.1",
     "@octokit/rest": "^21.0.2",
-    "openai": "^6.7.0"
+    "dockerode": "^4.0.9",
+    "dotenv": "^17.2.3",
+    "openai": "^6.7.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/dockerode": "^3.3.45",
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.15.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
